# python-generated-getters-setters

./: .gitignore  CMakeLists.txt  README.md  build.sh  cmake.sh  gen.sh
.github/workflows/: signals.yml
lib/buffer/: buffer.cpp  buffer.h  buffer.o.windows
script/: data.json  generate.py  generate_header.py  generate_list.py  generate_source-with-arrays.py  generate_source.py  generate_test.py
